@@ -1,7 +1,3 @@
-if !Object.const_defined?('Sequel')
-  require File.join(File.dirname(__FILE__), '../../sequel')
-end
-
 require 'mysql'
 
 # Monkey patch Mysql::Result to yield hashes with symbol keys
