@@ -1,2 +1,6 @@
 warn "Requiring 'sequel/db2' is deprecated. Please modify your code to require 'sequel' instead."
+
+if !Object.const_defined?('Sequel')
+  require File.join(File.dirname(__FILE__), '../sequel')
+end
 require File.join(File.dirname(__FILE__), 'adapters/db2')
